# AI4Code-kaggle

./: .gitignore  README.md  add_tokenization.py  ai4code-pytorch-distilbert-baseline_kaggle.ipynb  data_pipeline.ipynb  dataloader.py  kaggle_baseline.py  kaggle_baseline_pl.py  pipeline.ipynb  prepare_dataset.py  prepare_listwise_dataset.py  prepare_listwise_dataset_constants.py  preprocess_dataset.py  preprocessing.py  pyproject.toml  rank_model.ipynb  run.py  run_listwise_model.py  run_rank_model.py  s3_connector.py  sampler.py  test_preprocessing.py  wandb_baseline.ipynb
config/distilbert_test/: exp_0.yml  exp_1.yml  exp_2.yml  exp_3.yml  exp_4.yml  exp_5.yml
config/distilbert_train/: exp_2.yml  exp_5.yml
config/graphcodebert_test/: exp_0.yml  exp_1.yml  exp_2.yml  exp_3.yml  exp_4.yml  exp_5.yml
config/graphcodebert_train/: exp_0_resume.yml
config/listwise/: exp_0.yml  exp_1.yml  exp_2.yml  exp_3.yml
data_managment/: __init__.py  dataloader.py  features.py  preprocessing.py  s3_connector.py  sampler.py  samplers.py  test_preprocessing.py  translation.py
encoder-decoder/CodeTrans/: code_trance_metrics.py  kendall_tau.py  likelihood_compute_utils.py  parser.py  python-code-summarization-test.py  python_code_summarization_test.py
models/bert_classification/: run.py
models/kaggle_rank_baseline/: kaggle_baseline.py  kaggle_baseline_pl.py  rank_datamodule.py  rank_model.py  wandb_baseline.ipynb
notebooks/: generate_features.ipynb  nn_analysis.ipynb  sampling_comparison.ipynb
position_classification/: datasets.py  models.py  train.py  utils.py
runners/: model_evaluation.py  model_loader.py  model_training.py  order_builder.py  run_binary_predictions.py
tldextract/: __init__.py  requests_file.py  suffix_list.py
(+13 files in other folders)
