[tool.poetry]
name = "AI4Code-kaggle"
version = "0.1.0"
description = "Collection of scripts for winning the competition"
authors = ["Sergey Titov <sergey.titov@jetbrains.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
pandas = "^1.4.2"
tqdm = "^4.64.0"
seaborn = "^0.11.2"
pyarrow = "^8.0.0"
scikit-learn = "^1.1.1"
xgboost = "^1.6.1"
imbalanced-learn = "^0.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
