[tool.poetry]
name = "AI4Code-kaggle"
version = "0.1.0"
description = "Collection of scripts for winning the competition"
authors = ["Sergey Titov <sergey.titov@jetbrains.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
pandas = "^1.4.2"
tqdm = "^4.64.0"
seaborn = "^0.11.2"
pyarrow = "^8.0.0"
scikit-learn = "^1.1.1"
xgboost = "^1.6.1"
imbalanced-learn = "^0.9.1"
boto3 = "^1.24.21"
Markdown = "^3.3.7"
pytorch-lightning = "^1.6.4"
torch = "^1.12.0"
transformers = "^4.20.1"
datasets = "^2.3.2"
nltk = "^3.7"
omegaconf = "^2.2.2"
black = "^22.6.0"
tldextract = "^3.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
